# treasure-hunter

./: CMakeLists.txt  Constants.h  Dungeon.h  GameObject.cpp  GameObject.h  Gem.cpp  Gem.h  Monster.cpp  Monster.h  Player.cpp  Player.h  Position.cpp  Position.h  README.md  classDesign.md  main.cpp  selfEvaluation.md
gameObjects/: GameObject.cpp  GameObject.h  Gem.cpp  Gem.h  MagicApple.cpp  MagicApple.h  Monster.cpp  Monster.h  Player.cpp  Player.h
helperClasses/: Dungeon.cpp  Dungeon.h  EventLogger.cpp  EventLogger.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Level.cpp  Level.h  Position.h
levels/: Dungeon.cpp  Dungeon.h  Level.cpp  Level.h  Map.cpp  Map.h
managers/: GameManager.cpp  GameManager.h  LevelManager.cpp  LevelManager.h
